# springcard-ccid-serial

./: LICENSE.txt  README.md
docs/html/: annotated.html  ccid_8h.html  ccid_8h_source.html  ccid__constants_8h.html  ccid__constants_8h_source.html  ccid__convert_8c.html  ccid__convert_8c_source.html  ccid__device_8c.html  ccid__device_8c_source.html  ccid__errors_8h.html  ccid__errors_8h_source.html  ccid__exchange_8c.html  ccid__exchange_8c_source.html  ccid__exchange_8h.html  ccid__exchange_8h_source.html  ccid__hal_8h.html  ccid__hal_8h_source.html  ccid__helpers_8c.html  ccid__helpers_8c_source.html  ccid__i_8h.html  ccid__i_8h_source.html  ccid__serial__receiver_8c.html  ccid__serial__receiver_8c_source.html  ccid__serial__sender_8c.html  ccid__serial__sender_8c_source.html  ccid__typedefs_8h.html  ccid__typedefs_8h_source.html  classes.html  dir_0dd02f7eded9e489f89a978c5fbc7894.html  dir_2556ef1965d22d9632e94dba31eae3d2.html  dir_328cb32c8ba27f986b5efd2d84f4a706.html  dir_52c912f73dac9c4c0e442232e1b2bd80.html  dir_63f4afe1445b22a19c5fd4bbe26adb5e.html  dir_6d5bc884871a0dfa07e83609b0187672.html  dir_8d5b52a259cccaf7997176908c6019bf.html  dir_c29eeb5af533606caea8a09e66794740.html  dir_d39d9dd635f139f934fb0fccdd77836d.html  dir_e40cf12efb830060c65c966212c904f0.html  files.html  functions.html  (+66 more)
projects/linux/: Makefile  project.h
projects/rpi_pico/: CMakeLists.txt  README.md  ccid-serial.c  project.h
projects/win32_mingw/: Makefile
projects/win32_vs2022/: ccid-serial.sln  ccid-serial.vcxproj  ccid-serial.vcxproj.filters  project.h
src/: doxyfile  pcsc-serial.h
(+37 files in other folders)
